# swagger/swagger.yml
@@ -11,6 +11,17 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
+  /default/:
+    get:
+      tags:
+      - default
+      description: get welcome info
+      operationId: DefaultController.welcome
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/.Response'
   /object/:
     get:
       tags:
@@ -219,6 +230,8 @@ paths:
         "200":
           description: '{string} logout success'
 definitions:
+  .Response:
+    type: object
   models.Object:
     title: Object
     type: object
@@ -262,3 +275,6 @@ tags:
 - name: user
   description: |
     Operations about Users
+- name: default
+  description: |
+    Operations about default
